syntax = "proto3";

option csharp_namespace = "AuthMicroservice";

package authGrpcService;

service AuthGrpcService {
  rpc Login (LoginRequest) returns (TokenResponse);
  rpc SignUp (SignUpRequest) returns (TokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SignUpRequest {
	string email = 1;
	string password = 2;
	string user_name = 3;
}

message SignUpResult {
	string error_message = 1;
	string user_id = 2;
}

